k8s/ingress-monitor.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/group.name: monitoring-alb

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: prometheus-grafana-ext
              port:
                number: 3000
        - path: /prometheus
          pathType: Prefix
          backend:
            service:
              name: prometheus-kube-prometheus-prometheus-ext
              port:
                number: 9090
        - path: /alertmanager
          pathType: Prefix
          backend:
            service:
              name: prometheus-kube-prometheus-alertmanager-ext
              port:
                number: 9093
